--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "bloc-frontend-project-starter",
+  "name": "bloc-chat",
   "version": "0.0.2",
   "description": "Starter project for the Bloc Frontend Web Development",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bloc/bloc-frontend-project-starter"
+    "url": "git+https://github.com/bloc/bloc-frontend-project-starter.git"
   },
   "main": "server.js",
   "scripts": {
@@ -19,11 +19,18 @@
   "devDependencies": {
     "connect-modrewrite": "^0.7.9",
     "es5-shim": "^4.0.1",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.1",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-hapi": "^0.8.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/bloc/bloc-frontend-project-starter/issues"
+  },
+  "homepage": "https://github.com/bloc/bloc-frontend-project-starter#readme",
+  "keywords": [
+    "chat_room"
+  ]
 }
